--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -3,12 +3,12 @@ html {
 }
 
 @font-face {
-  font-family: Arial;
-  src: url(../../assets/fonts/arial.ttf);
+  font-family: "Arial";
+  src: url("../../assets/fonts/arial.ttf");
 }
 @font-face {
-  font-family: Georgia;
-  src: url(../../assets/fonts/georgia.ttf);
+  font-family: "Georgia";
+  src: url("../../assets/fonts/georgia.ttf");
 }
 
 /* ----------------------------HEADER---------------------------- */
@@ -41,6 +41,8 @@ html {
   letter-spacing: 0.06em;
   padding-top: 58px;
   margin: 0;
+  cursor: pointer;
+  /* text-decoration: none; */
 }
 
 .logo-subtitle {
@@ -55,6 +57,8 @@ html {
   color: #ffffff;
   padding-top: 10px;
   padding-left: 5px;
+  cursor: pointer;
+  /* text-decoration: none; */
 }
 
 .header-nav {
@@ -77,7 +81,7 @@ html {
   line-height: 160%;
   color: #cdcdcd;
   text-decoration: none;
-  transition: 0.7s;
+  transition: 1s;
   border-bottom: 3px solid transparent;
 }
 
@@ -270,12 +274,12 @@ html {
   background-color: transparent;
   border-radius: 50%;
   margin-top: 195px;
+  transition: 1s;
 }
 
 .previous:hover {
   background: #fddcc4;
   cursor: pointer;
-  transition: 1s;
   border: #fddcc4;
 }
 
@@ -286,12 +290,12 @@ html {
   background-color: transparent;
   border-radius: 50%;
   margin-top: 195px;
+  transition: 1s;
 }
 
 .next:hover {
   background: #fddcc4;
   cursor: pointer;
-  transition: 1s;
   border: #fddcc4;
 }
 
@@ -313,12 +317,13 @@ html {
   align-items: center;
   background: #fafafa;
   border-radius: 9px;
+  transition: 1s;
 }
 
 .card:hover {
   background: #ffffff;
   cursor: pointer;
-  box-shadow: 0px 5px 15px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
 }
 
 .card-image {
@@ -343,12 +348,12 @@ html {
   border-radius: 100px;
   background: #fafafa;
   margin: 26px 0px;
+  transition: 1s;
 }
 
 .card:hover .card-button {
   background: #fddcc4;
   cursor: pointer;
-  transition: 1s;
   border: #fddcc4;
 }
 
@@ -420,12 +425,12 @@ html {
   padding: 10px 15px;
   border: 2px solid #f1cdb3;
   border-radius: 50%;
+  transition: 1s;
 }
 
 .close:hover {
   background: #fddcc4;
   cursor: pointer;
-  transition: 1s;
 }
 
 .modal-image {
@@ -548,12 +553,12 @@ html {
   display: block;
   margin-top: 42px;
   width: 22%;
+  transition: 1s;
 }
 
 .our-friends-button:hover {
   background: #fddcc4;
   cursor: pointer;
-  transition: 1s;
   border: #fddcc4;
 }
 
@@ -810,12 +815,12 @@ html {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  transition: 1s;
 }
 
 .credit-button:hover {
   background: #fddcc4;
   cursor: pointer;
-  transition: 1s;
   background-image: url("../../assets/icons/credit-card.svg");
   background-repeat: no-repeat;
   background-position: 15px 10px;
@@ -836,7 +841,7 @@ html {
   font-size: 20px;
   line-height: 115%;
   letter-spacing: 0.06em;
-  transition: 0.7s;
+  transition: 1s;
 }
 
 .in-addition-text-transparent {
