--- a/shelter/pages/pets/style2.css
+++ b/shelter/pages/pets/style2.css
@@ -6,9 +6,17 @@ html {
   font-family: "Arial";
   src: url("../../assets/fonts/arial.ttf");
 }
+
 @font-face {
   font-family: "Georgia";
+  font-weight: 400;
   src: url("../../assets/fonts/georgia.ttf");
+}
+
+@font-face {
+  font-family: "Georgia";
+  font-weight: 700;
+  src: url("../../assets/fonts/georgiab.ttf");
 }
 
 /* ----------------------------HEADER---------------------------- */
