--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -1,5 +1,6 @@
 html {
   scroll-behavior: smooth;
+  font-size: 10px;
 }
 
 @font-face {
@@ -25,7 +26,7 @@ html {
 }
 
 .container {
-  width: 1280px;
+  max-width: 1280px;
   margin: 0 auto;
   padding: 0 40px;
 }
@@ -41,7 +42,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 32px;
+  /* font-size: 32px; */
+  font-size: 3.2rem;
   display: flex;
   align-items: center;
   color: #f1cdb3;
@@ -49,14 +51,14 @@ html {
   padding-top: 58px;
   margin: 0;
   cursor: pointer;
-  /* text-decoration: none; */
 }
 
 .logo-subtitle {
   font-family: "Arial", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 13px;
+  /* font-size: 13px; */
+  font-size: 1.3rem;
   line-height: 15px;
   display: flex;
   align-items: center;
@@ -65,26 +67,26 @@ html {
   padding-top: 10px;
   padding-left: 5px;
   cursor: pointer;
-  /* text-decoration: none; */
 }
 
 .header-nav {
   margin-left: auto;
   padding-top: 58px;
-  padding-right: 5px;
+  padding-right: 3px;
 }
 
 .header-li {
   display: inline-block;
   list-style: none;
-  padding-left: 30px;
+  padding-left: 32px;
 }
 
 .header-link {
   font-family: "Arial", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 15px;
+  /* font-size: 15px; */
+  font-size: 1.5rem;
   line-height: 160%;
   color: #cdcdcd;
   text-decoration: none;
@@ -127,7 +129,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 44px;
+  /* font-size: 44px; */
+  font-size: 4.4rem;
   color: #ffffff;
   line-height: 130%;
   padding-bottom: 28px;
@@ -139,7 +142,8 @@ html {
   font-family: "Arial", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 15px;
+  /* font-size: 15px; */
+  font-size: 1.5rem;
   line-height: 160%;
   color: #cdcdcd;
 }
@@ -163,7 +167,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 17px;
+  /* font-size: 17px; */
+  font-size: 1.7rem;
   line-height: 130%;
   letter-spacing: 1px;
   color: #292929;
@@ -220,7 +225,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 35px;
+  /* font-size: 35px; */
+  font-size: 3.5rem;
   line-height: 130%;
   letter-spacing: 0.06em;
   color: #545454;
@@ -234,7 +240,8 @@ html {
   font-family: "Arial", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 15px;
+  /* font-size: 15px; */
+  font-size: 1.5rem;
   line-height: 160%;
   color: #4c4c4c;
 }
@@ -260,7 +267,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 35px;
+  /* font-size: 35px; */
+  font-size: 3.5rem;
   line-height: 130%;
   text-align: center;
   letter-spacing: 0.06em;
@@ -341,7 +349,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
+  /* font-size: 20px; */
+  font-size: 2rem;
   line-height: 23px;
   letter-spacing: 0.06em;
   color: #545454;
@@ -370,7 +379,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 17px;
+  /* font-size: 17px; */
+  font-size: 1.7rem;
   line-height: 130%;
   letter-spacing: 0.06em;
   color: #292929;
@@ -463,7 +473,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 35px;
+  /* font-size: 35px; */
+  font-size: 3.5rem;
   line-height: 130%;
   letter-spacing: 0.06em;
   color: #000000;
@@ -474,7 +485,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
+  /* font-size: 20px; */
+  font-size: 2rem;
   line-height: 115%;
   letter-spacing: 0.06em;
   color: #000000;
@@ -488,7 +500,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 15px;
+  /* font-size: 15px; */
+  font-size: 1.5rem;
   line-height: 114%;
   letter-spacing: 0.06em;
   color: #000000;
@@ -507,7 +520,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 15px;
+  /* font-size: 15px; */
+  font-size: 1.5rem;
   line-height: 110%;
   letter-spacing: 0.06em;
   color: #000000;
@@ -518,7 +532,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 15px;
+  /* font-size: 15px; */
+  font-size: 1.5rem;
   line-height: 110%;
   letter-spacing: 0.06em;
   color: #000000;
@@ -573,7 +588,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 17px;
+  /* font-size: 17px; */
+  font-size: 1.7rem;
   line-height: 130%;
   color: #292929;
   letter-spacing: 0.06em;
@@ -687,7 +703,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 35px;
+  /* font-size: 35px; */
+  font-size: 3.5rem;
   line-height: 127%;
   text-align: center;
   letter-spacing: 0.06em;
@@ -752,7 +769,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
+  /* font-size: 20px; */
+  font-size: 2rem;
   line-height: 115%;
   letter-spacing: 0.06em;
   color: #545454;
@@ -793,7 +811,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 35px;
+  /* font-size: 35px; */
+  font-size: 3.5rem;
   line-height: 130%;
   padding-bottom: 20px;
   letter-spacing: 0.06em;
@@ -804,7 +823,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 15px;
+  /* font-size: 15px; */
+  font-size: 1.5rem;
   line-height: 110%;
   letter-spacing: 0.06em;
   color: #545454;
@@ -845,7 +865,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
+  /* font-size: 20px; */
+  font-size: 2rem;
   line-height: 115%;
   letter-spacing: 0.06em;
   transition: 1s;
@@ -855,7 +876,8 @@ html {
   font-family: "Arial", serif;
   font-style: italic;
   font-weight: 400;
-  font-size: 12px;
+  /* font-size: 12px; */
+  font-size: 1.2rem;
   line-height: 18px;
   color: #b2b2b2;
 }
@@ -884,7 +906,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 35px;
+  /* font-size: 35px; */
+  font-size: 3.5rem;
   line-height: 130%;
   letter-spacing: 0.06em;
   color: #ffffff;
@@ -912,7 +935,8 @@ html {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
+  /* font-size: 20px; */
+  font-size: 2rem;
   line-height: 115%;
   letter-spacing: 0.06em;
   color: #f1cdb3;
